# Master_Thesis

./: .gitignore  LICENSE  Makefile  Master_Thesis - Shortcut.lnk  README.md  environment.yml  load_new_req.py  load_new_reqs.py  pyproject.toml  requirements.txt
AdaFace-master/: .gitignore  README.md  README_TRAIN.md  config.py  convert.py  data.py  data_dict_test.pt  evaluate_utils.py  head.py  inference.py  main.py  main_master.py  predict_adaface.py  predict_adaface_fine_tuning.py  predict_adaface_original.py  requirements.txt  train_val.py  utils.py
MagFace-main/: .gitignore  README.md
Master_Thesis/: README.md  pyproject.toml
OFIQ-Project-main/: CMakeLists.txt  LICENSE.md  Version.txt
data/: RFW_full_info_excluding_children.csv  adult_full_mated_and_nonmated  adults_balanced.csv  child_balanced.csv  children_full_mated_and_nonmated.csv  downloading_FG_NET.ipynb  fine_tune_train_list.list  make_image_list_magface.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
master_thesis/: __init__.py  get_features_test.sh  predict_adaface.py  predict_magface.py
models/: magface.py
notebooks/: Kat_temp_dataloader.ipynb  Katrine_plots_nb.ipynb  balance_data.ipynb  data_loading_hda.ipynb  data_loading_lfw.ipynb  data_loading_mrcd.ipynb  data_loading_rlfw.ipynb  data_loading_rlfw_updated.ipynb  data_loading_ylfw.ipynb  data_loading_ylfw_updated.ipynb  face_alignment.ipynb  gabi_results_magface.ipynb  mated_sim_scores_adult_below_29.npy  mated_sim_scores_adult_final.npy  mated_sim_scores_child_below_29.npy  move_data.ipynb  (+21 more)
(+1087 files in other folders)
